# bloom

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  build.sh  compile.sh  test.ppm  tiny.ppm
include/: camera.h  camera.hpp  color.h  color.hpp  common.h  common.hpp  hittable.h  hittable.hpp  hittable_list.h  hittable_list.hpp  interval.h  interval.hpp  lambertian.hpp  material.hpp  metal.hpp  ray.h  ray.hpp  sphere.h  sphere.hpp  utils.h  vec3.h  vec3.hpp
renders/: material_render.ppm  matte_world.ppm  render.ppm  sampled_world.ppm  sphere.ppm  world.ppm  world_fuzz.ppm
scripts/: format.sh
src/: camera.cc  color.cc  cube.cc  hittable.cc  hittable_list.cc  interval.cc  main.cc  ray.cc  sphere.cc  vec3.cc
src/materials/: lambertian.cc  metal.cc
